Feat: Add More Page Content
Improve webpage readability and understanding improving the
user experience

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,16 @@
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(4, 1fr);
 }
+
+.scoreInformation {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 1em;
+}
+
+.scoreboard {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+}
